# GemStack

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  GemStackCore.cpp  GemStackCore.h  GemStackQueue.txt  LICENSE  README.md  build.bat  build.sh  embed_cli.py  main.cpp
include/: CliManager.h  ConsoleUI.h  GemStackCore.h  GitAutoCommit.h  ProcessExecutor.h
src/: CliManager.cpp  ConsoleUI.cpp  GemStackCore.cpp  GitAutoCommit.cpp  ProcessExecutor.cpp  main.cpp
tests/: test_cooldown.cpp  test_git_auto_commit.cpp  test_multiline.cpp  test_parsing.cpp  test_process_executor.cpp
